<resources>
    <string name="app_name">Risk Areas</string>
    <string name="app_name_mayus">RISK AREAS</string>

    <string name="content_description_login">login</string>

    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>

    <string name="sign_in">Iniciar sesión</string>

    <string name="_123">1234567890</string>
    <string name="_123maps">1234567890.,</string>
    <string name="abc_ABC">aábcdeéfghiíjklmnñoópqrstuúvwxyz AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUÚVWXYZ</string>
    <string name="abcABC">aábcdeéfghiíjklmnñoópqrstuúvwxyzAÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUÚVWXYZ</string>
    <string name="abcABC123">aábcdeéfghiíjklmnñoópqrstuúvwxyzAÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUÚVWXYZ1234567890</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="credits">Créditos</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="areas">Zonas</string>
    <string name="search_for">Buscar por:</string>
    <string name="municipalities">Municipios</string>
    <string name="igecem">IGECEM</string>
    <string name="risks">Riesgos</string>
    <string name="all">Todos</string>
    <string name="order_by">Ordenar de:</string>
    <string name="name">Nombre</string>
    <string name="significance">Significado</string>
    <string name="header">Cabecera municipal</string>
    <string name="superfice">Superficie (km)</string>
    <string name="altitude">Altitud</string>
    <string name="clime">Clima</string>
    <string name="latitude">Latitud</string>
    <string name="logitude">Logitud</string>

    <string name="add">Agregar</string>
    <string name="save">Guardar</string>

    <string name="add_municipality">Agregar Municipio</string>
    <string name="add_area">Agregar Area</string>

    <string name="inundacion">Inundación</string>
    <string name="deslave">Deslave</string>
    <string name="sismica">Zona sísmica</string>
    <string name="incendio">Incendio forestal</string>
    <string name="volcanica">Zona vólcanica</string>
    <string name="derrumbes">Derrumbes</string>
    <string name="edit_municipality">Editar Municipio</string>
    <string name="edit_area">Editar Area</string>
    <string name="wait">Espera unos segundos</string>
    <string name="not_found">No se encontraron registros</string>
</resources>
