<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="35dp">

    <TextView
        android:id="@+id/listM_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/municipalities"
        android:textColor="@color/colorTextPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listM_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/listM_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listM_maps"
        app:layout_constraintStart_toEndOf="@+id/listM_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp"
        android:contentDescription="@string/edit_municipality" />

    <ImageButton
        android:id="@+id/listM_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listM_delete"
        app:layout_constraintStart_toEndOf="@+id/listM_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dashboard_black_24dp"
        android:contentDescription="@string/municipalities" />

    <ImageButton
        android:id="@+id/listM_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_municipality"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listM_maps"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notifications_black_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>